wdl-analysis/tests/validation/placeholder-in-import.errors
error: import URI cannot contain placeholders
  ┌─ tests/validation/placeholder-in-import:5:23
  │
5 │ import "this contains ~{"a placeholder"}" as foo
  │                       ^^^^^^^^^^^^^^^^^^
  │
  = fix: remove the placeholder

error: import URI cannot contain placeholders
  ┌─ tests/validation/placeholder-in-import:6:28
  │
6 │ import "this also contains ${"a placeholder"}" as bar
  │                            ^^^^^^^^^^^^^^^^^^
  │
  = fix: remove the placeholder

error: failed to import `ok.wdl`: No such file or directory (os error 2)
  ┌─ tests/validation/placeholder-in-import:7:8
  │
7 │ import "ok.wdl" as baz
  │        ^^^^^^^^

